--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -92,7 +92,9 @@ input[type="radio"] {
 .gender-label {
     padding: 10px 15px;
     font-size: 25px;
+    font: bolder;
     border-radius: 5px;
+    font-weight: bolder;
     cursor: pointer;
     color: white;
     transition: transform 0.3s ease, background-color 0.3s ease;
